# flasher-service

./: .gitlab-ci.yml  README.md  flasher-service.env  flasher-service.service  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
debian/: changelog  control
flasher_client/: __init__.py  cli.py  client.py  config.py
flasher_service/: __init__.py  api.py  config.py  flash.py  main.py  mfg_flash.py  safety.py  state.py
tests/: __init__.py  test_flasher_client.py  test_flasher_service.py
